<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>omni_sim</name>
	<version>0.0.0</version>
	<description>TODO: Package description</description>
	<maintainer email="d.kintou@gmail.com">k-trash</maintainer>
	<license>Apache-2.0</license>
	
	<buildtool_depend>ament_cmake_ros</buildtool_depend>
	<build_depend>generate_parameter_library</build_depend>

	<depend>ament_cmake_auto</depend>
	<depend>rclcpp</depend>
	<depend>rclcpp_components</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>rclcpp_lifecycle</depend>
	<depend>parameter_traits</depend>
	<depend>controller_interface</depend>
	<depend>controller_manager</depend>
	<depend>hardware_interface</depend>
	<depend>plugin_lib</depend>
	<depend>rclcpp_utils</depend>
	<depend>realtime_tools</depend>
	<depend>tf2</depend>
	<depend>tf2_msgs</depend>
	<depend>omni_controllers_param</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
